...
                  }
                },
              ),
              Align(
                alignment: Alignment.centerLeft,
                child: Text(
                  'Change repayment rate',
                  style: ClientConfig.getTextStyleScheme().heading1,
                ),
              ),
              const SizedBox(height: 16),
              StoreConnector<AppState, CardApplicationViewModel>(
                onInit: (store) =>
...
          const SizedBox(height: 24),
          const Spacer(),
          SizedBox(
            width: double.infinity,
            height: 48,
            child: Button(
              text: "Save changes",
              disabledColor: ClientConfig.getCustomColors().neutral300,
              color: ClientConfig.getColorScheme().tertiary,
              textColor: ClientConfig.getColorScheme().surface,
              onPressed: canContinue
                  ? () {
                      if (chosenPercentageRate >= 10) {
...
                  },
                ),
                const SizedBox(width: 16),
                Expanded(
                  child: Text(
                    type == RepaymentType.percentage
                        ? 'Percentage rate repayment'
                        : 'Fixed rate repayment',
                    style: ClientConfig.getTextStyleScheme().labelMedium,
                    textAlign: TextAlign.left,
                  ),
                ),
                const SizedBox(width: 16),
                InkWell(
...
