...
      dateTime = argument.recordedAt!;

      status = 'Completed';
      category = argument.bookingType == 'AUTOMATIC_REPAYMENT'
          ? const Category(
              id: 'automaticRepayment',
              name: 'Automatic repayment',
            )
          : argument.category!;
      accountOwner = user.person.firstName;
      iban = argument.recipientIban;
      note = argument.description;

...
          style: ClientConfig.getTextStyleScheme().bodySmallRegular.copyWith(
            color: ClientConfig.getColorScheme().secondary,
          ),
        ),
      );

      status = 'Upcoming';
      category = const Category(
        id: 'automaticRepayment',
        name: 'Automatic repayment',
      );
      accountOwner = user.person.firstName;
      iban = user.personAccount.iban;
...
