...
        child: Column(
          children: [
            const AppToolbar(),
            Align(
              alignment: Alignment.centerLeft,
              child: Text(
                'Set repayment reminder',
                style: ClientConfig.getTextStyleScheme().heading1,
              ),
            ),
            const SizedBox(height: 16),
            Text(
              'We will remind you before we trigger the automatic repayment from your reference account whenever it’s more convenient for you.',
...

  @override
  Widget build(BuildContext context) {
    return Column(
      children: [
        _ReminderListTile(
          title: '1 hour before',
          value: TimePeriod.hours,
          groupValue: _isReminderSelected(TimePeriod.hours)
              ? TimePeriod.hours
              : null,
          onChanged: !_isReminderSelected(TimePeriod.hours)
              ? (value) => Navigator.pop(context, value)
...
